# trustzone-m-rs

non-secure-app/: Cargo.toml
non-secure-app/src/: main.rs
secure-app/: Cargo.toml
secure-app/src/: main.rs
