[package]
authors = ["luojia65 <me@luojia.cc>"]
edition = "2024"
readme = "README.md"
name = "non-secure-app"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "1"

# this lets you use `cargo fix`!
[[bin]]
name = "non-secure-app"
test = false
bench = false
